# mobility-delay-platform

./: .env.example  .gitignore  Dockerfile.airflow  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/api/: deps.py  health.py  routes.py
app/core/: config.py  database.py
app/repositories/: delays.py
app/schemas/: delays.py  health.py  prediction.py
app/services/: prediction.py
dags/: mobility_pipeline.py
dashboard/: Dockerfile  Home.py  api_client.py
dashboard/pages/: 1_Delay_By_Hour.py  2_Station_Comparison.py
db/: init.sql
ingestion/: client.py  merger.py  parser.py  raw_loader.py  run_ingestion.py  transformer.py
ml/: features.py  train.py
mobility_dbt/: .user.yml  dbt_project.yml  profiles.yml
mobility_dbt/models/: sources.yml
mobility_dbt/models/analytics/: fact_delay.sql  fact_delay.yml  fact_delay_summary.sql
mobility_dbt/models/staging/: stg_historical_trips.sql  stg_historical_trips.yml  stg_realtime_trips.sql  stg_realtime_trips.yml  stg_trips.sql  stg_trips.yml
mobility_dbt/seeds/: historical_trips.csv  schema.yml
mobility_dbt/tests/: no_negative_delay.sql
mobility_delay_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
model_registry/: metadata.json
scripts/: historical_data.py  setup.sh
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_parser.py  test_transformer.py
